# partnuh

./: .env.template  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_agent.py  chat.py  fake.py  private_caller.py  smol.py
examples/basic_agent/: README.md  main.py  requirements.txt
examples/custom_agent/: .env.template  README.md  main.py
examples/customization/: README.md  requirements.txt
examples/quickstart/: .env.template  README.md  main.py  requirements.txt
src/partnuh/: __init__.py  __main__.py  adapt.py  cli.py  config.py  demo.py  events.py  keymap.py  pacer.py  presets.py  protocol.py  spec.py
src/partnuh/adapters/: __init__.py  openai_adapter.py  smolagents_adapter.py
tests/: test_smoke.py  test_unit.py
