[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "partnuh"
version = "0.0.4"
description = "A streaming terminal REPL for any agent."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jake Henderson", email = "jake@perpetualautomata.com" }]
keywords = ["cli", "repl", "agent", "llm", "terminal", "streaming", "smolagents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Terminals",
]
dependencies = [
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.59.0"]
smolagents = ["smolagents>=1.20.0"]
dotenv = ["python-dotenv>=1.0.0"]
all = ["openai>=1.59.0", "smolagents>=1.20.0", "python-dotenv>=1.0.0"]
dev = ["pytest>=7.0"]

[project.scripts]
partnuh = "partnuh.__main__:main"

[project.urls]
Homepage = "https://github.com/jakehendersonx/partnuh"
Repository = "https://github.com/jakehendersonx/partnuh"

[tool.hatch.build.targets.wheel]
packages = ["src/partnuh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
